ProcessInterLanguageLinks: PrintGC